--- a/pages/14-tip-calc/index.html
+++ b/pages/14-tip-calc/index.html
@@ -39,5 +39,8 @@
       <p id="tip-amt"></p>
       <p id="total-amt"></p>
     </main>
+    <script>
+      src = "script.js";
+    </script>
   </body>
 </html>
